Update JUnitUtil.java